--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongoose": "^6.3.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1"
   }
 }
